<resources>
    <string name="language_name">English</string>
    <string name="app_name">MyCitizen.net</string>
    <string name="menu_connections">Connections</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_messages_user">Messages</string>
    <string name="menu_messages_group">Chat</string>
    <string name="menu_messages_resource">Comments</string>
    <string name="menu_location">Show on Map</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_empty_trash">Empty trash</string>
    <string name="title_activity_main">MyCitizen.net</string>
    <string name="loading">Receiving data</string>
    <string name="please_wait">Please wait…</string>
    <string name="language_all">all</string>
    <string name="tags_all">all tags</string>
    <string name="login">Login</string>
    <string name="getstarted">Get started</string>
    <string name="rememberme">Remember me</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="url">url</string>
    <string name="signup">Sign up</string>
    <string name="signup_help">You will receive an email where you have to confirm your registration. Later you can add personal details.</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="login_error_unactive">Your account is not activated (either you are banned or you have to yet click the activation link sent to your email).</string>
    <string name="login_error_login_failed">Username or password are wrong.</string>
    <string name="login_error_unknown_error">Couldn\'t log in.</string>
    <string name="really_quit">Do you really want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login_error_empty">Either username or password is empty</string>
    <string name="registration_finish">Please check your emails and finish registration.</string>
    <string name="apierror">Error communicating with deployment</string>
    <string name="not_available_offline">Not available offline.</string>
    <string name="detail_unaccessible">You cannot view this detail.</string>
    <string name="undefined_name">Undefined name</string>
    <string name="request_friendship">Request friendship</string>
    <string name="cancel_friendship">Cancel friendship</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="join_group">Join group</string>
    <string name="leave_group">Leave group</string>
    <string name="users">Users</string>
    <string name="groups">Groups</string>
    <string name="resources">Resources</string>
    <string name="send">Send</string>
    <string name="trash">Trash</string>
    <string name="re">Re</string>
    <string name="empty_trash">Empty trash</string>
    <string name="visibility">Visibility</string>
    <string name="visibility_private">private</string>
    <string name="reset">reset</string>
    <string name="suggest">suggest</string>
    <string name="map">map</string>
    <string name="visibility_members">members</string>
    <string name="visibility_world">world</string>
    <string name="my_profile">My profile</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="language">Language</string>
    <string name="my_connections">only my connections</string>
    <string name="create_group">Create group</string>
    <string name="text">Text</string>
    <string name="get_started_in_3_steps">Get started in 3 steps</string>
    <string name="gets_started_2">2. Choose Deployment</string>
    <string name="or">or</string>
    <string name="get_started_login">Sign in</string>
    <string name="get_started_register">Sign up</string>
    <string name="domain_of_own_installation">domain of own installation</string>
    <string name="gets_started_1">1. Choose Your Local Settings</string>
    <string name="gets_started_3">3. Join us</string>
    <string name="next">next</string>
    <string name="version">Version</string>
    <string name="deployment">Deployment</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile_saved">Profile changes saved successfully.</string>
    <string name="profile_saved_email_changed">A message with a confirmation link was sent to your email address.</string>
    <string name="profile_not_saved">Profile changes couldn\'t be saved.</string>
    <string name="profile_description_title">Enter your description</string>
    <string name="profile_portrait_title">Choose your avatar</string>
    <string name="profile_tags_title">My interests</string>
    <string name="profile_map_title">My location</string>
    <string name="top_title_profile">Profile</string>
    <string name="top_title_register">Sign up</string>
    <string name="top_title_filter">Filter</string>
    <string name="top_title_filter_map">Filter by location</string>
    <string name="top_title_detail_map">Location</string>
    <string name="top_title_detail_user_map">User Location</string>
    <string name="top_title_detail_group_map">Group Location</string>
    <string name="top_title_detail_resource_map">Resource Location</string>
    <string name="top_title_create_group">Create Group</string>
    <string name="top_title_create_group_tags">Create Group: Tags</string>
    <string name="top_title_create_group_map">Create Group: Location</string>
    <string name="top_title_get_started">Get Started</string>
    <string name="filter_messages">Filter Messages</string>
    <string name="top_title_map">Map</string>
      <string name="a_message_with_a_confirmation_link_was_sent">A message with a confirmation link has been sent.</string>
    <string name="filter_by_location">Filter by location</string>
    <string name="emails_unread_messages">Emails on unread messages</string>
    <string name="once_per_hour">max. once per hour</string>
    <string name="once_per_day">max. once per day</string>
    <string name="once_per_week">max. once per week</string>
    <string name="homepage">Homepage</string>
    <string name="connection_quality">Connection Quality</string>
    <string name="offline">offline</string>
    <string name="reduced">reduced</string>
    <string name="full">full</string>
    <string name="Reply">reply</string>
    <string name="profile_name">name</string>
    <string name="profile_surname">surname</string>
    <string name="profile_url">url</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_email">Email</string>
    <string name="language_quit">Please restart the application to see the new language.</string>
    <string name="really_disconnect">Really disconnect?</string>
    <string name="ip_blocked">Your IP address seems to be blocked.</string>
    <string name="enter_email">Enter your email address</string>
    <string name="email_sent">Email has been sent.</string>
    <string name="email_not_sent">Couldn\'t send email. Make sure your email address matches the one you used to register.</string>
    <string name="trash_on">in trash</string>
    <string name="trash_off">not in trash</string>
    <string name="viewed_on">new</string>
    <string name="viewed_off">all</string>
    <string name="item_not_available_offline">Item not available offline.</string>
    <string name="toast_crash">Sorry, the app crashed, but a report has been sent to the developers to help fix the issue!</string>
    <string name="accept_friendship">accept friendship</string>
    <string name="loadingdotdotdot">Loading…</string>
    <string name="your_message_hint">your message</string>
    <string name="help">Help</string>
    <string name="loading_data">Loading data</string>
    <string name="profile_description">My Profile: Description</string>
    <string name="tags">Tags</string>
    <string name="languages">Languages</string>
    <string name="connections">Connections</string>
    <string name="video">Video</string>
    <string name="loading_more">Loading more…</string>
    <string name="dashboard_messages">Messages</string>
    <string name="dashboard_new_messages">new</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="finished">Finished</string>
    <string name="user_member_of_groups">Member of Groups</string>
    <string name="user_subscribed_resources">Subscribed Resources</string>
    <string name="group_members">Group Members</string>
    <string name="group_resources">Group Resources</string>
    <string name="subscribed_users">Subscribed Users</string>
    <string name="subscribed_groups">Subscribed Groups</string>
    <string name="nothing_found">Nothing found.</string>
    <string name="no_offline_data">No offline data.</string>
    <string name="friends">Friends</string>
    <string name="menu_friends">Friends</string>
    <string name="moderator">moderator</string>
    <string name="administrator">administrator</string>
    <string name="no_link">no link</string>
    <string name="please_complete_profile">Please complete your profile!</string>
    <string name="logout_confirmation_question">Do you really want to logout?</string>
    <string name="email_already_in_use">This email address is already in use.</string>
    <string name="email_address_wrong">Please correct your email address.</string>
    <string name="username_already_in_use">This username is already in use.</string>
    <string name="wrong_security_answer">The security answer was wrong.</string>
    <string name="security_question_for_signup">Security Question</string>
    <string name="profile_completed">Profile completed</string>
    <string name="error_deployment_test_failed">Error: Deployment test failed.</string>
    <string name="recent_activities">Recent Activities</string>
    <string name="load_more">load more...</string>
    <string name="toggle_status">toggle status</string>
</resources>