<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAE9E3"
    android:orientation="vertical"
    android:weightSum="10">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/bg" />

    <LinearLayout
        android:id="@+id/sign_up_top_menu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="0dp"
            android:layout_weight="2">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/used_api"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/url"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="1">

        <Button
            android:id="@+id/signup_cancel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/bottom_menu_button"
            android:drawableTop="@drawable/ic_action_help"
            android:paddingTop="11dp"
            android:text=""
            android:textColor="@color/white" />

        <Button
            android:id="@+id/sign_up_register"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:background="@drawable/bottom_menu_button"
            android:drawableTop="@drawable/ic_action_accept"
            android:paddingTop="11dp"
            android:text=""
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/sign_up_bottom_menu"
        android:layout_below="@id/sign_up_top_menu"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/username" />

            <EditText
                android:id="@+id/sign_up_username"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="text" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:text="@string/password" />

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:text="@string/email" />

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:id="@+id/security_question_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:textStyle="bold"
                    android:text="@string/security_question_for_signup" />
                <TextView
                    android:id="@+id/security_question"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                     />

                <EditText
                    android:id="@+id/security_question_answer"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp" />

                <ImageView
                    android:id="@+id/captcha_image"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:scaleType="fitCenter"/>
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingBottom="10dp"
                android:text="@string/signup_help" />


        </LinearLayout>

        </ScrollView>

    </LinearLayout>


</RelativeLayout>
