<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EAE9E3"
    android:orientation="vertical"
    android:tileMode="repeat"
    android:weightSum="10">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:src="@drawable/bg" />

    <LinearLayout
        android:id="@+id/login_top"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/login_top"
        android:orientation="vertical">
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/login_view_top_menu"
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:layout_alignParentTop="false"
        android:layout_below="@id/login_top"

        android:gravity="top">



        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:layout_weight="1"
            android:gravity="top">


            <LinearLayout
                android:id="@+id/top_menu_left_half"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="top"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="10dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/top_menu_right_half"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="top"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal">

                <Button
                    android:id="@+id/login_getstarted"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="top"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_get_started"
                    android:text="@string/getstarted"
                    android:textColor="@color/button_text"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout

        android:id="@+id/login_view_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_weight="1">

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/login_help"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/bottom_menu_button"
                android:drawableTop="@drawable/ic_action_help"
                android:paddingTop="11dp" />

        </LinearLayout>

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/login_forgotten_password"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:background="@drawable/bottom_menu_button"
                android:text="@string/forgotpassword"
                android:textColor="@color/bottom_menu_text"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/login_view_bottom_menu"
        android:layout_below="@id/login_view_top_menu"
        android:layout_weight="1"
        android:paddingTop="20dp"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/login_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_login"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/input"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="19sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/input">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:background="@drawable/input"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />

                <ToggleButton
                    android:id="@+id/show_password"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:checked="false"
                    android:background="@drawable/checkbox_image"
                    android:hapticFeedbackEnabled="true"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:textOff=""
                    android:textOn=""
                    />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/login_row2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_row1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1">

            <CheckBox
                android:id="@+id/login_remember"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:checked="true"
                android:contentDescription="15dp"
                android:text="@string/rememberme"
                android:textSize="16sp" />

            <Button
                android:id="@+id/login_submit"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/login"
                android:textColor="@color/button_text"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_welcome"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_row2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:layout_weight="1"
            android:visibility="gone">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Welcome!"
                android:textColor="@color/login_top"
                android:textSize="42dp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>
