<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EAE9E3"
    android:weightSum="10" >
	
    <LinearLayout
        
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/widget_view_top_menu"
        android:layout_alignParentBottom="false"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal" >
        	
		<LinearLayout
		    
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="1" >

			<ToggleButton
			    android:id="@+id/widget_select_user"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:background="@drawable/top_menu_button"
			    android:checked="true"
			    android:text="@string/users"
			    android:textColor="@color/black"
			    android:textOff="@string/users"
			    android:textOn="@string/users" />

			<ToggleButton
			    android:id="@+id/widget_select_group"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:background="@drawable/top_menu_button"
			    android:text="@string/groups"
			    android:textColor="@color/black"
			    android:textOff="@string/groups"
			    android:textOn="@string/groups" />

			<ToggleButton
			    android:id="@+id/widget_select_resource"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:background="@drawable/top_menu_button"
			    android:text="@string/resources"
			    android:textColor="@color/black"
			    android:textOff="@string/resources"
			    android:textOn="@string/resources" />

		</LinearLayout>
	</LinearLayout>
	<LinearLayout
	    
	    android:id="@+id/widget_view_bottom_menu"
	    android:layout_width="match_parent"
        android:layout_height="60dp"
	    android:layout_alignParentBottom="true"
	     >
        	
		<LinearLayout
		    
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_alignParentBottom="true"
		    android:layout_gravity="center_vertical"
		    android:gravity="center_vertical"
		    android:orientation="horizontal" >

			<Button
			    android:id="@+id/widget_menu_filter"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:background="@drawable/bottom_menu_button"
			    
			    android:drawableTop="@drawable/ico_filter_off"
			    android:paddingTop="11dp"
			    android:textColor="@color/white" />

			<Button
			    android:id="@+id/widget_menu_dashboard"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:paddingTop="11dp"
			    android:drawableTop="@drawable/ico_dashboard_low"
			    android:background="@drawable/bottom_menu_button"
			    android:textColor="@color/white" />

			<Button
			    android:id="@+id/widget_menu_messages"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_weight="1"
			    android:background="@drawable/bottom_menu_button"
			    android:drawableTop="@drawable/ico_message_no"
			    android:paddingTop="11dp"
			    android:textColor="@color/white" />

		</LinearLayout>
	</LinearLayout>

	<LinearLayout
	    android:id="@+id/widget_main_view"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@id/widget_view_bottom_menu"
	    android:layout_below="@id/widget_view_top_menu"
	    android:layout_weight="5"
	    android:background="@color/background_bubbles"
	    android:orientation="vertical" >

		<RelativeLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="1"
            android:background="#EAE9E3"
		    android:orientation="vertical" >

            <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="fitStart"
        android:paddingTop="2dp"
        android:src="@drawable/bg" />

			<ListView
			    android:id="@+id/widget_list"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_marginBottom="5dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:layout_marginTop="2dp" >

			</ListView>
		</RelativeLayout>
		

	</LinearLayout>

	

</RelativeLayout>
